# archive_sys

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/core/: indexer.py  search_service.py
app/db/: database.py  repository.py
app/extractors/: __init__.py  base.py  registry.py  text_extractor.py
app/ui/: main_window.py
app/utils/: file_utils.py
app/workers/: __init__.py  index_worker.py
docs/: desktop-archive-implementation-ar.md  project-status-ar.md
tests/: test_extractors.py  test_index_and_search.py
