[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archivesys"
version = "0.1.0"
description = "Desktop archiving and indexing MVP"
requires-python = ">=3.10"

dependencies = [
  "PySide6>=6.7,<7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
